--- a/pom.xml
+++ b/pom.xml
@@ -64,12 +64,10 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
                 <configuration>
-                    <source>11</source> <!-- same as <java.version> -->
-                    <target>11</target> <!-- same as <java.version> -->
+                    <source>1.11</source>
+                    <target>1.11</target>
                 </configuration>
             </plugin>
         </plugins>
